fixed spacing with the left aside and portfolio and changed font color in portfolio to white

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -134,7 +134,7 @@ $icon-font-path: '../fonts/';
     margin-left: 33%;
 
     //float: right;
-    width: 66%;
+    width: 67%;
     display: inline-block;
     .header {
 
@@ -142,6 +142,7 @@ $icon-font-path: '../fonts/';
     #portfolio {
       padding: 10px;
       background-color: #EBEDEB;
+      color: white;
       #pf-left {
         width: 66%;
         display: inline-block;
@@ -198,6 +199,7 @@ $icon-font-path: '../fonts/';
       #pf-right {
         display: inline-block;
         width: 33%;
+        position: absolute;
         #img6 {
           background-image: url("https://images.unsplash.com/photo-1445437303333-50e823122ca6?q=80&fm=jpg&s=446e576c21b6158089d5edca174dcba6");
           -webkit-background-size: cover;
